<resources>
    <string name="app_name">MEDICATION</string>

    // menu_drawer
    <string name="main_page">Главная страница</string>
    <string name="schedule">График уколов</string>
    <string name="dimension">Измерения сахара в крови</string>
    <string name="setting">Установки</string>
    // nav_header
    <string name="navigation_drawer">Навигация</string>


    // Start FragmentStart
    <string name="start_text">ИНСУЛИНОВЫЙ ПОМОШНИК</string>
    <string name="start_schedule">ГРАФИК УКОЛОВ</string>
    <string name="start_dimension">ИЗМЕРЕНИЯ САХАРА</string>
    <string name="start_tools">УСТАНОВКИ</string>

    // Schedule Fragment
    <string name="type">Тип укола</string>
    <string name="time">Время</string>
    <string name="amount">Объем</string>
    <string name="description">Описание</string>

    // Schedule Fragment, save Button, hint
    <string name="hint_type">short/long</string>
    <string name="hint_time_hour">10</string>
    <string name="hint_time">:</string>
    <string name="hint_time_minute">30</string>
    <string name="hint_volume">10</string>

    // menu Schedule
    <string name="deleteAll">Удалить все</string>
    <string name="deleteOne">Удалить элементы</string>
    <string name="insert">Вставить</string>
    <string name="restart">Перезапустить</string>


    // Setting Fragment
    <string name="setting_text_notification">Введите текст уведомления</string>
    <string name="setting_edit_text_notification">
        Например: Алексей, пора вколоть инсулинчик.
    </string>
    <string name="setting_button_test_notofication">Тест уведомления</string>


    // Dimension Fragment
    // Button
    <string name="button_add">Добавить</string>
    <string name="button_delete">Удалить</string>


</resources>