<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple_200"
        tools:context=".StartFragment">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="@string/start_text" />-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/medical" />

        <Button
            android:id="@+id/button_start_to_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="schedule"
            android:text="@string/start_schedule"
            style="@style/start_fragment" />

        <Button
            android:id="@+id/button_start_to_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_dimension"
            style="@style/start_fragment" />

        <Button
            android:id="@+id/button_start_to_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_tools"
            style="@style/start_fragment" />

    </LinearLayout>
</layout>