<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".schedule.ScheduleFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.myproject.schedule.ScheduleViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple_200">
<!--        tools:context= "com.example.android.myproject.schedule.ScheduleFragment">-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/schedule"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/schedule"
                android:text="@string/type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/schedule"
                android:text="@string/time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/schedule"
                android:text="@string/amount"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/schedule"
                android:text="@string/description"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dashed_lines"
            android:orientation="horizontal"
            android:visibility="gone">


            <EditText
                android:id="@+id/schedule_insert_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="short"/>

            <EditText
                android:id="@+id/schedule_insert_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Формат- 10:00"
                android:inputType="time" />

            <EditText
                android:id="@+id/schedule_insert_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="10"/>

            <EditText
                android:id="@+id/schedule_insert_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/button_save_schedule"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/save_buton"
                android:src="@drawable/insert_true"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/schedule_item"/>






    </LinearLayout>



</layout>